--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
   <div class="form-container">
     <h2>📚 Student Registration</h2>
     <p class="tagline">Fill in your details to join the journey of learning!</p>
-    
+
+    <!-- Developer Info -->
+    <p style="text-align:center; font-weight:bold; color:#333; margin-top: 10px;">
+      Made by <span style="color:#007BFF;">Mr. Ceo M Mehboob</span> - Student of Computer Science
+    </p>
+
     <!-- SheetDB embedded form -->
     <div class="form-wrapper">
       <script src="https://sheetdb.io/s/f/t1i3p1z3uzud4.js"></script>
@@ -20,3 +25,4 @@
 
 </body>
 </html>
+
