--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <!-- Developer Info -->
     <p style="text-align:center; font-weight:bold; color:#333; margin-top: 10px;">
-      Made by <span style="color:#007BFF;">Mr. Ceo M Mehboob</span> - Student of Computer Science
+      Made by <span style="color:white;">Mr. Ceo M Mehboob</span> - Student of Computer Science
     </p>
 
     <!-- SheetDB embedded form -->
@@ -25,4 +25,3 @@
 
 </body>
 </html>
-
