--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <!-- SheetDB embedded form -->
     <div class="form-wrapper">
-      <script src="https://sheetdb.io/s/f/t1i3p1z3uzud4.js"></script>
+      <script src="https://sheetdb.io/s/f/fojmtigc5mq3s.js"></script>
     </div>
   </div>
 
